--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.inputsystem": "1.6.3",
     "com.unity.multiplayer.tools": "1.1.0",
     "com.unity.netcode.gameobjects": "1.5.2",
+    "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.services.multiplay": "1.0.5",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
