--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,5 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+Assets/Plugins/Android/FirebaseApp.androidlib/AndroidManifest.xml
+Assets/Plugins/Android/FirebaseApp.androidlib/res/values/google-services.xml
