--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.netcode.gameobjects": "1.6.0",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.services.multiplay": "1.0.5",
+    "com.unity.services.vivox": "15.1.210000-pre.1",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.5",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
