--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ai.navigation": "1.1.5",
     "com.unity.cinemachine": "2.9.5",
     "com.unity.collab-proxy": "2.0.5",
     "com.unity.device-simulator.devices": "1.0.0",
