--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,10 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 Assets/Plugins/Android/FirebaseApp.androidlib/AndroidManifest.xml
 Assets/Plugins/Android/FirebaseApp.androidlib/res/values/google-services.xml
+*.meta
+*.meta
+*.meta
+*.meta
+*.meta
+*.meta
+*.meta
