--- a/ProjectSettings/Packages/com.unity.services.vivox/Settings.json
+++ b/ProjectSettings/Packages/com.unity.services.vivox/Settings.json
@@ -4,7 +4,7 @@
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "tokenKey",
-                "value": "{\"m_Value\":\"\"}"
+                "value": "{\"m_Value\":\"MbXpvbPpbTtSCRkTYcT42uqtn73Bbqfa\"}"
             },
             {
                 "type": "System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
@@ -24,6 +24,11 @@
             {
                 "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
                 "key": "isServiceEnabled",
+                "value": "{\"m_Value\":true}"
+            },
+            {
+                "type": "System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089",
+                "key": "isTestMode",
                 "value": "{\"m_Value\":true}"
             }
         ]
