--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
     "com.unity.netcode.gameobjects": "1.6.0",
     "com.unity.postprocessing": "3.2.2",
     "com.unity.render-pipelines.universal": "14.0.8",
+    "com.unity.services.authentication": "3.0.0",
     "com.unity.services.multiplay": "1.0.5",
     "com.unity.services.vivox": "16.0.0-pre.1",
     "com.unity.test-framework": "1.1.33",
