--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -16,6 +16,7 @@
     "com.unity.multiplayer.tools": "1.1.0",
     "com.unity.netcode.gameobjects": "1.7.1",
     "com.unity.postprocessing": "3.2.2",
+    "com.unity.purchasing": "4.10.0",
     "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.services.authentication": "3.0.0",
     "com.unity.services.cloudsave": "3.1.0",
